Resolves: tdf#101924 fatal exception on Sounds like Japanese options

suspected regression from

commit 1a967fead616b201535449fa812775c88d5b2e3b
Author: Eike Rathke <erack@redhat.com>
Date:   Tue Mar 24 15:53:23 2015 +0000

    do not include non-mask bits in masks

Change-Id: Ic35a4aecc4834fc255eae81d3d83cc4e74618604
Reviewed-on: https://gerrit.libreoffice.org/28764
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
Tested-by: Julien Nabet <serval2412@yahoo.fr>